--- a/BAM/index.html
+++ b/BAM/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Self-Destruct Button </title>
+  <title>BAM</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -31,14 +31,14 @@
 <div class="hinges"></div>
 
 <div class="text">
-	SELF-&thinsp;DESTRUCT
+	APPARAAT&thinsp;VERNIETIGING
 </div>
 
 <div id="panel">
-	<div id="msg">DEVICE SELF-DESTRUCTION </div>
+	<div id="msg">APPARAAT VERNIETIGING </div>
 	<div id="time">9</div>
-	<span id="abort">ABORT</span>
-	<span id="detonate">DETONATE</span>
+	<span id="abort">ANNULEER</span>
+	<span id="detonate">ONTSTEEK</span>
 </div>
 
 <div id="turn-off"></div>
